# Aria

./: .copilot-instructions.md  .gitignore  IMPLEMENTATION_ROADMAP.md  README.md  aria-integration-instructions.md  aria_full_spec_with_observability.md  aria_inventory_tool_plugin_copilot_instructions.md  aria_plugin_inventory_actions_spec.md  aria_providers_tooling_spec.md  client_start.sh  client_start.sh.example  dev.json  disc.txt  inventory.json  pyproject.toml  start.sh  start.sh.example  sync.sh  sync.sh.example
app/: aria_logging.py  cli.py  main.py  main.py.backup
app/asr/: parakeet_onnx.py
app/audio/: chunking.py  ringbuffer.py  vad.py
app/audio_sink/: base.py  sonos_http_sink.py
app/http_audio/: server.py
app/llm/: ollama_client.py  tools.py
app/plugins/: __init__.py  base.py  registry.py  tooling_provider.py
app/speaker_recognition/: recognizer.py
app/speech_output/: echo_guard.py  echo_guard_v2.py  speech_output.py
app/tts/: audio_normalizer.py  piper_engine.py  text_chunker.py  tts_engine.py
client/macos/: README.md  aria_tts_sonos_record.py  enroll.py  generate_aria_tts_samples.sh  mic_diag.py  mic_stream.js  mic_stream.py  record_samples.py  requirements.txt
data/routing/: edge_cases.jsonl  synthetic_with_edges_v2.jsonl  test_small.jsonl  test_trilingual.jsonl  test_with_edges.jsonl
docs/: ENVIRONMENT.md  install_speaker_recognition.md  jeedom_capability_quick_ref.md  jeedom_mqtt_analysis.md  jeedom_mqtt_command_execution.md  jeedom_normalized_examples.py  tuning.md
docs/archive/: aria-copilot-instructions-updated-tts.md  aria-copilot-instructions-updated.md  aria_copilot_instructions_FINAL.md  aria_copilot_instructions_part4.md
results/: benchmark_expanded.csv  onnx_comparison.csv
scripts/: benchmark_rtf.py  download_model.py  macos_parakeet_test.py  ort_smoketest.py  ws_wav_smoketest.py
tests/: test_sonos_http_sink.py
tests/plugins/: __init__.py  test_plugin_system.py
tests/routing/: BENCHMARK_RESULTS.md  LANGUAGE_ANALYSIS_EXAMPLE.md  README.md  SERVER_BENCHMARK_GUIDE.md  analyze_by_language.py  analyze_errors.py  benchmark.py  benchmark_lang_aware.py  (+8 more)
(+10 files in other folders)
