[project]
name = "aria"
version = "0.0.0"
description = "ARIA server"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn[standard]>=0.27",
  "numpy>=1.26",
  "onnx-asr>=0.10",
  "onnxruntime>=1.17",
  "webrtcvad>=2.0.10",
  "setuptools>=68",
]

[project.scripts]
aria-server = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.asr", "app.audio", "app.llm"]

[tool.uvicorn]
factory = false
