[project]
name = "aria"
version = "0.0.0"
description = "ARIA server"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn[standard]>=0.27",
  "numpy>=1.26",
  "onnx-asr>=0.10",
  "onnxruntime>=1.17",
  "webrtcvad>=2.0.10",
  "soco>=0.30.0",
  "setuptools>=68,<81",
  "huggingface_hub>=0.20.0",
  "speechbrain>=1.0.0",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp311-cp311-linux_x86_64.whl ; platform_system=='Linux' and platform_machine=='x86_64' and python_version=='3.11'",
  "torchaudio @ https://download.pytorch.org/whl/cpu/torchaudio-2.3.1%2Bcpu-cp311-cp311-linux_x86_64.whl ; platform_system=='Linux' and platform_machine=='x86_64' and python_version=='3.11'",
  "torch; platform_system!='Linux' or platform_machine!='x86_64'",
  "torchaudio; platform_system!='Linux' or platform_machine!='x86_64'",
  "paho-mqtt>=2.0.0",
  # Intent routing dependencies
  "sentence-transformers>=2.2.2",
  "scikit-learn>=1.3.0",
  "transformers>=4.29.0",
  "optimum==1.19.2"
]

[project.scripts]
aria-server = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "app",
  "app.asr",
  "app.audio",
  "app.llm",
  "app.tts",
  "app.http_audio",
  "app.audio_sink",
  "app.speech_output",
  "app.plugins",
  "app.plugins.inventory",
  "app.plugins.inventory.sources",
  "app.plugins.actions",
]

[tool.uvicorn]
factory = false
